# fxpack

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp  toml.cpp  toml.hpp  utils.cpp  utils.hpp
src/preprocess/: vars.cpp  vars.hpp
